--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Resetando os espaços dos elementos */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,7 +7,7 @@
 }
 
 /* O body ocupa 100% da tela e tem fundo preto */
-body{
+body {
     width: 100%;
     height: 100vh;
     background: rgba(33, 33, 33, 0.98);
@@ -16,7 +16,7 @@ body{
 }
 
 /* Tag i tem ponteiro normal do mouse e cor branca */
-i{
+i {
     cursor: pointer;
     color: white;
 }
@@ -24,7 +24,7 @@ i{
 /* Posição fixa, Overflow controla o que acontece se o conteúdo for grande demais pra área */
 /* hidden esconde o restante, largura 100%, altura 55px, padding fixo, margem inferior 10px */
 /* Display contem itens flexíveis, alinhados ao centro com espaço entre eles e acima de tudo */
-.navbar{
+.navbar {
     position: fixed;
     overflow: hidden;
     width: 100%;
@@ -38,29 +38,29 @@ i{
 }
 
 /* Todos os itens flexíveis e alinhados ao centro */
-.navbar .logo, 
+.navbar .logo,
 .navbar .search,
-.navbar .icons{
+.navbar .icons {
     display: flex;
     align-items: center;
 }
 
 /* Tamanho da fonte em 24px e margin cima=0,dir=20,baixo=0,esq=10 */
-.navbar .logo i{
+.navbar .logo i {
     font-size: 24px;
     margin: 0 20px 0 10px;
 }
 
-.navbar .logo img{
+.navbar .logo img {
     width: 100px;
     cursor: pointer;
 }
 
-.navbar .search{
+.navbar .search {
     height: 30px;
 }
 
-.navbar .search input{
+.navbar .search input {
     width: 570px;
     height: 100%;
     padding-left: 10px;
@@ -72,11 +72,11 @@ i{
     color: white;
 }
 
-.navbar .search input:focus{
+.navbar .search input:focus {
     border-color: rgb(32, 32, 223);
 }
 
-.navbar .search .searchbtn{
+.navbar .search .searchbtn {
     width: 50px;
     height: 100%;
     background: gray;
@@ -87,12 +87,12 @@ i{
     border-radius: 0 1px 1px 0;
 }
 
-.navbar .search .searchbtn i{
+.navbar .search .searchbtn i {
     font-size: 22px;
-    color: rgba(255, 255, 255,0.5);
+    color: rgba(255, 255, 255, 0.5);
 }
 
-.navbar .icons i{
+.navbar .icons i {
     margin-right: 25px;
     font-size: 25px;
 }
@@ -102,48 +102,48 @@ i{
     cursor: pointer;
 }
 
-.navbar .icons .notification span[data-count]:after{
+.navbar .icons .notification span[data-count]:after {
     width: 18px;
     height: 18px;
-    position:absolute;
-    right:15px;
-    top:-8px;
+    position: absolute;
+    right: 15px;
+    top: -8px;
     content: attr(data-count);
-    font-size:14px;
-    padding:2px;
-    border-radius:50%;
+    font-size: 14px;
+    padding: 2px;
+    border-radius: 50%;
     color: white;
-    background:#d11811;
-    text-align:center;
-  }
+    background: #d11811;
+    text-align: center;
+}
 
-.navbar .icons img{
+.navbar .icons img {
     width: 35px;
     cursor: pointer;
     margin-right: 10px;
 }
 
 /* sidebar styling */
-.sidebar{
+.sidebar {
     position: fixed;
     left: 0px;
     top: 60px;
     width: 240px;
     height: auto;
     padding-right: 10px;
-    color: rgba(255, 255, 255,0.8);
+    color: rgba(255, 255, 255, 0.8);
 }
 
-.sidebar .links{
+.sidebar .links {
     padding-bottom: 15px;
     border-bottom: 1px solid gray;
 }
 
-.sidebar .links-2{
+.sidebar .links-2 {
     padding-top: 15px;
 }
 
-.sidebar .links .icon{
+.sidebar .links .icon {
     display: flex;
     align-items: center;
     padding: 10px 24px;
@@ -151,11 +151,11 @@ i{
     cursor: pointer;
 }
 
-.sidebar .links .icon:hover{
+.sidebar .links .icon:hover {
     background: rgb(87, 82, 82);
 }
 
-.sidebar .links .icon a{
+.sidebar .links .icon a {
     text-decoration: none;
     color: white;
     display: flex;
@@ -163,53 +163,54 @@ i{
     font-size: 16px;
 }
 
-.sidebar .links .icon a i{
+.sidebar .links .icon a i {
     margin-right: 20px;
     font-size: 22px;
 }
 
-.sidebar .subscription{
+.sidebar .subscription {
     border-bottom: none;
 }
 
-.sidebar .subscription h4{
+.sidebar .subscription h4 {
     padding: 10px 24px;
 }
 
-.content{
+.content {
     position: absolute;
     left: 240px;
     top: 60px;
     width: calc(100% - 240px);
-    height: 91vh;
+    flex: 1;
+    height: calc(100% - 60px);
     background: #181818;
 }
 
-.videos{
+.videos {
     display: flex;
     flex-wrap: wrap;
-    margin:  20px 0 0 20px;
+    margin: 20px 0 0 20px;
 }
 
-.videos .video{
+.videos .video {
     width: 250px;
     height: 240px;
     margin: 0 8px 30px 8px;
     cursor: pointer;
 }
 
-.video .thumbnail{
+.video .thumbnail {
     width: 100%;
     height: 144px;
     position: relative;
 }
 
-.video .thumbnail img{
+.video .thumbnail img {
     width: 100%;
     height: 100%;
 }
 
-.video .thumbnail .minit{
+.video .thumbnail .minit {
     position: absolute;
     right: 5px;
     bottom: 5px;
@@ -222,29 +223,29 @@ i{
     color: white;
 }
 
-.video .video-info{
+.video .video-info {
     display: flex;
     margin: 10px 0;
 }
 
-.video .video-info .user img{
+.video .video-info .user img {
     width: 40px;
     cursor: pointer;
     margin: 0 10px 0 2px;
 }
 
-.video .video-info .text{
+.video .video-info .text {
     display: flex;
     flex-direction: column;
-    color: rgba(255, 255, 255,0.5);
+    color: rgba(255, 255, 255, 0.5);
 }
 
-.video .video-info .text .title{
+.video .video-info .text .title {
     color: white;
     margin-bottom: 5px;
 }
 
-.video .video-info .text .views::after{
+.video .video-info .text .views::after {
     content: "•";
     margin: 0 4px;
 }
